[package]
name = "w9-db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
base64ct = "=1.6.0"
